==> Jean-MarcHarvengt/MCUME/MCUME_teensy41/teensypce/emuapi.cpp <==
#define KEYMAP_PRESENT 1
  #include "emuapi.h"
  #include "iopins.h"
#include "vga_t_dma.h"
#include "tft_t_dma.h"
#include "USBHost_t36.h"  // Read this header first for key info
#include <SD.h>
#define MAX_FILES           64
#define AUTORUN_FILENAME    "autorun.txt"
#define MAX_FILENAME_SIZE   34
#define MAX_MENULINES       9
#define TEXT_HEIGHT         16
#define TEXT_WIDTH          8
#define MENU_FILE_XOFFSET   (2*TEXT_WIDTH)
#define MENU_FILE_YOFFSET   (2*TEXT_HEIGHT)
#define MENU_FILE_W         (MAX_FILENAME_SIZE*TEXT_WIDTH)
#define MENU_FILE_H         (MAX_MENULINES*TEXT_HEIGHT)
#define MENU_FILE_BGCOLOR   RGBVAL16(0x00,0x00,0x40)
#define MENU_JOYS_YOFFSET   (12*TEXT_HEIGHT)
#define MENU_VBAR_XOFFSET   (0*TEXT_WIDTH)
#define MENU_VBAR_YOFFSET   (MENU_FILE_YOFFSET)
#define MENU_TFT_XOFFSET    (MENU_FILE_XOFFSET+MENU_FILE_W+8)
#define MENU_TFT_YOFFSET    (MENU_VBAR_YOFFSET+32)
#define MENU_VGA_XOFFSET    (MENU_FILE_XOFFSET+MENU_FILE_W+8)
#define MENU_VGA_YOFFSET    (MENU_VBAR_YOFFSET+MENU_FILE_H-32-37)

int emu_ReadAnalogJoyX(int min, int max) 
{
  int val = analogRead(PIN_JOY2_A1X);
#if INVX
  val = 4095 - val;
#endif
  val = val-xRef;
  val = ((val*140)/100);
  if ( (val > -512) && (val < 512) ) val = 0;
  val = val+2048;
  return (val*(max-min))/4096;
}

int emu_ReadAnalogJoyY(int min, int max) 
{
  int val = analogRead(PIN_JOY2_A2Y);
#if INVY
  val = 4095 - val;
#endif
  val = val-yRef;
  val = ((val*120)/100);
  if ( (val > -512) && (val < 512) ) val = 0;
  //val = (val*(max-min))/4096;
  val = val+2048;
  //return val+(max-min)/2;
  return (val*(max-min))/4096;
}

int emu_ReadKeys(void) 
{
  uint16_t retval;
  uint16_t j1 = readAnalogJoystick();
  uint16_t j2 = 0;
  
  // Second joystick
#ifdef PIN_JOY1_1
  if ( digitalRead(PIN_JOY1_1) == LOW ) j2 |= MASK_JOY2_UP;
#endif
#ifdef PIN_JOY1_2
  if ( digitalRead(PIN_JOY1_2) == LOW ) j2 |= MASK_JOY2_DOWN;
#endif
#ifdef PIN_JOY1_3
  if ( digitalRead(PIN_JOY1_3) == LOW ) j2 |= MASK_JOY2_RIGHT;
#endif
#ifdef PIN_JOY1_4
  if ( digitalRead(PIN_JOY1_4) == LOW ) j2 |= MASK_JOY2_LEFT;
#endif
#ifdef PIN_JOY1_BTN
  if ( digitalRead(PIN_JOY1_BTN) == LOW ) j2 |= MASK_JOY2_BTN;
#endif
  if (joySwapped) {
    retval = ((j1 << 8) | j2);
  }
  else {
    retval = ((j2 << 8) | j1);
  }

  if (usbnavpad & MASK_JOY2_UP) retval |= MASK_JOY2_UP;
  if (usbnavpad & MASK_JOY2_DOWN) retval |= MASK_JOY2_DOWN;
  if (usbnavpad & MASK_JOY2_LEFT) retval |= MASK_JOY2_LEFT;
  if (usbnavpad & MASK_JOY2_RIGHT) retval |= MASK_JOY2_RIGHT;
  if (usbnavpad & MASK_JOY2_BTN) retval |= MASK_JOY2_BTN;
  if (usbnavpad & MASK_KEY_USER1) retval |= MASK_KEY_USER1;
  if (usbnavpad & MASK_KEY_USER2) retval |= MASK_KEY_USER2;

#ifdef PIN_KEY_USER1 
  if ( digitalRead(PIN_KEY_USER1) == LOW ) retval |= MASK_KEY_USER1;
#endif
#ifdef PIN_KEY_USER2 
  if ( digitalRead(PIN_KEY_USER2) == LOW ) retval |= MASK_KEY_USER2;
#endif
#ifdef PIN_KEY_USER3 
  if ( digitalRead(PIN_KEY_USER3) == LOW ) retval |= MASK_KEY_USER3;
#endif
#ifdef PIN_KEY_USER4 
  if ( digitalRead(PIN_KEY_USER4) == LOW ) retval |= MASK_KEY_USER4;
#endif

#ifdef TEECOMPUTER
  keymatrix_hitrow = -1;
  unsigned char row;
  unsigned short cols[6]={KCOLOUT1,KCOLOUT2,KCOLOUT3,KCOLOUT4,KCOLOUT5,KCOLOUT6};
  for (int i=0;i<6;i++){
    pinMode(cols[i],OUTPUT);
    digitalWrite(cols[i], 0);
    row=0; 
    row |= (digitalRead(KROWIN1) ? 0 : 0x01);
    row |= (digitalRead(KROWIN2) ? 0 : 0x02);
    row |= (digitalRead(KROWIN3) ? 0 : 0x04);
    row |= (digitalRead(KROWIN4) ? 0 : 0x08);
    row |= (digitalRead(KROWIN5) ? 0 : 0x10);
    row |= (digitalRead(KROWIN6) ? 0 : 0x20);
    row |= (digitalRead(KROWIN7) ? 0 : 0x40);
    digitalWrite(cols[i], 1);
    pinMode(cols[i],INPUT_DISABLE);
    keymatrix[i]=row;
  }

  bool fn_pressed=false;
  if ( keymatrix[5] & 0x08 ) {fn_pressed=true; keymatrix[5] &= ~0x08;};
  
  bool sh_pressed=false;
  if ( keymatrix[5] & 0x10 ) {sh_pressed=true; keymatrix[5] &= ~0x10;};

  for (int i=0;i<6;i++){
    row = keymatrix[i];
    if (row) keymatrix_hitrow=i;
  }

  //6,9,15,8,7,22
#if INVX
  if ( row & 0x40  ) retval |= MASK_JOY2_LEFT;
  if ( row & 0x20  ) retval |= MASK_JOY2_RIGHT;
#else
  if ( row & 0x20  ) retval |= MASK_JOY2_LEFT;
  if ( row & 0x40  ) retval |= MASK_JOY2_RIGHT;
#endif
#if INVY
  if ( row & 0x4  ) retval |= MASK_JOY2_DOWN;
  if ( row & 0x1  ) retval |= MASK_JOY2_UP;  
#else
  if ( row & 0x1  ) retval |= MASK_JOY2_DOWN;
  if ( row & 0x4  ) retval |= MASK_JOY2_UP;  
#endif
  if ( row & 0x02 ) retval |= MASK_JOY2_BTN;

  // Handle LED flash
  uint32_t time_ms=millis();
  if ((time_ms-last_t_ms) > 100) {
    last_t_ms = time_ms;
    if (ledflash_toggle == false) {
      ledflash_toggle = true;
    }
    else {
      ledflash_toggle = false;
    }  
  }  

  if ( sh_pressed ) {
      key_sh = true;      
  }
  else {
    key_sh = false;
    if ( fn_pressed ) {
      if (key_fn == false) 
      {
        // Release to Press transition
        if (hundred_ms_cnt == 0) {
          keypress_t_ms=time_ms;
          hundred_ms_cnt += 1; // 1
        }  
        else {
          hundred_ms_cnt += 1; // 2
          if (hundred_ms_cnt >= 2) 
          { 
            hundred_ms_cnt = 0; 
            if ( (time_ms-keypress_t_ms) < 500) 
            {
              if (key_extmode == false) 
              {
                key_extmode = true;
              }
              else 
              {
                key_extmode = false;
              } 
            }
          }        
        }
      }
      else {
        // Keep press
        if (hundred_ms_cnt == 1) {
          if ((millis()-keypress_t_ms) > 1000) 
          {
            if (key_extmode == false) 
            {
              key_extmode = true;
            }
            else 
            {
              key_extmode = false;
            } 
            hundred_ms_cnt = 0; 
          }
        } 
      } 
      key_fn = true;
    }
    else  {
      key_fn = false;    
    }    
  }
  
  // Handle LED
  if (key_extmode == true) {
    digitalWrite(KLED, (ledflash_toggle?1:0));
  }
  else {
    if ( (key_fn == true) || (key_sh == true) ) {
      digitalWrite(KLED, 1);
    }
    else {
      digitalWrite(KLED, 0);
    }     
  } 
 
  if ( key_fn ) retval |= MASK_KEY_USER2;
  if ( ( key_fn ) && (keymatrix[4] == 0x10 )) retval |= MASK_KEY_USER1;

  if ( (key_fn) && (key_sh) )
#else
  if ( ((retval & (MASK_KEY_USER1+MASK_KEY_USER2)) == (MASK_KEY_USER1+MASK_KEY_USER2))
     || (retval & MASK_KEY_USER4 ) )
#endif
  {
// Reset procedure T3.X and T4.0 by Frank Boesing !!   
#if defined(__IMXRT1052__) || defined(__IMXRT1062__)    
    uint32_t tmp = SNVS_LPCR; // save control register
    
    SNVS_LPSR |= 1;
    
    // disable alarm
    SNVS_LPCR &= ~0x02;
    while (SNVS_LPCR & 0x02);
    
    __disable_irq();
    //get Time:
    uint32_t lsb, msb;
    do {
      msb = SNVS_LPSRTCMR;
      lsb = SNVS_LPSRTCLR;
    } while ( (SNVS_LPSRTCLR != lsb) | (SNVS_LPSRTCMR != msb) );
    uint32_t secs = (msb << 17) | (lsb >> 15);
    
    //set alarm
    secs += 2;
    SNVS_LPTAR = secs;
    while (SNVS_LPTAR != secs);
    
    SNVS_LPCR = tmp | 0x02; // restore control register and set alarm
    while (!(SNVS_LPCR & 0x02));
    
    SNVS_LPCR |= (1 << 6); // turn off power
    while (1) asm("wfi");  
#else
    *(volatile uint32_t *)0xE000ED0C = 0x5FA0004;
    while (true) {
      ;
    } 
#endif 
  }
  
  return (retval);
}

void emu_InitJoysticks(void) { 

  // Second Joystick   
#ifdef PIN_JOY1_1
  pinMode(PIN_JOY1_1, INPUT_PULLUP);
#endif  
#ifdef PIN_JOY1_2
  pinMode(PIN_JOY1_2, INPUT_PULLUP);
#endif  
#ifdef PIN_JOY1_3
  pinMode(PIN_JOY1_3, INPUT_PULLUP);
#endif  
#ifdef PIN_JOY1_4
  pinMode(PIN_JOY1_4, INPUT_PULLUP);
#endif  
#ifdef PIN_JOY1_BTN
  pinMode(PIN_JOY1_BTN, INPUT_PULLUP);
#endif  

#ifdef PIN_KEY_USER1
  pinMode(PIN_KEY_USER1, INPUT_PULLUP);
#endif  
#ifdef PIN_KEY_USER2
  pinMode(PIN_KEY_USER2, INPUT_PULLUP);
#endif  
#ifdef PIN_KEY_USER3
  pinMode(PIN_KEY_USER3, INPUT_PULLUP);
#endif  
#ifdef PIN_KEY_USER4
  pinMode(PIN_KEY_USER4, INPUT_PULLUP);
#endif  
#ifdef PIN_JOY2_BTN
  pinMode(PIN_JOY2_BTN, INPUT_PULLUP);
#endif  

#ifdef PIN_JOY2_A1X
  analogReadResolution(12);
  xRef=0; yRef=0;
  for (int i=0; i<10; i++) {
    xRef += analogRead(PIN_JOY2_A1X);
    yRef += analogRead(PIN_JOY2_A2Y);  
    delay(20);
  }
#if INVX
  xRef = 4095 -xRef/10;
#else
  xRef /= 10;
#endif
#if INVY
  yRef = 4095 -yRef/10;
#else
  yRef /= 10;
#endif   
#endif

#ifdef TEECOMPUTER
  // keyboard LED
  pinMode(KLED,OUTPUT);
  digitalWrite(KLED,1);

  // Output (cols)
  pinMode(KCOLOUT1,OUTPUT);
  pinMode(KCOLOUT2,OUTPUT);
  pinMode(KCOLOUT3,OUTPUT);
  pinMode(KCOLOUT4,OUTPUT);
  pinMode(KCOLOUT5,OUTPUT);
  pinMode(KCOLOUT6,OUTPUT);
  digitalWrite(KCOLOUT1,1);
  digitalWrite(KCOLOUT2,1);
  digitalWrite(KCOLOUT3,1);
  digitalWrite(KCOLOUT4,1);
  digitalWrite(KCOLOUT5,1);
  digitalWrite(KCOLOUT6,1);

  // Input pins (rows)
  pinMode(KROWIN1, INPUT_PULLUP);
  pinMode(KROWIN2, INPUT_PULLUP);
  pinMode(KROWIN3, INPUT_PULLUP);
  pinMode(KROWIN4, INPUT_PULLUP);
  pinMode(KROWIN5, INPUT_PULLUP);
  pinMode(KROWIN6, INPUT_PULLUP); 
  pinMode(KROWIN7, INPUT_PULLUP); 
#endif
}
